jquery is working

--- a/frontend/components/banner/_banner.html.erb
+++ b/frontend/components/banner/_banner.html.erb
@@ -1,2 +1,4 @@
-<div class="banner ripples">
+<div class="banner ripple">
 </div>
+<script src="http://www.jqueryscript.net/demo/jQuery-Plugin-For-Water-Ripple-Animation-ripples/js/jquery.ripples.js">
+</script>
